# easyinference

./: .gitignore  README.md  example.env  experiment.ipynb  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
easyinference/: __init__.py  config.py  inference.py
easyinference/cloudsql/: README.md  schema.py  table_utils.py
